(fix) spacing

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -108,7 +108,7 @@ table {
 
 .landing-login-content .landing-login-form .landing-login-checkbox {
   margin-right: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .btn.btn-success {
